# PhotoManagement

./: LICENSE  README.md  local_config.json  pyproject.toml
install/: PhotoFrame.service  launch_photo_frame.sh  ota_update.sh
src/photo_frame/: PhotoView.py  UI.py  config.json  config_management.py  image.py  main.py  photoviewer.kv
src/photo_manager/: test.py
