[project]
name = "photomanager"
version = "0.1.0"
description = ""
authors = [
    {name = "Edward Parry",email = "edward@eparry.uk"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    'tqdm',
    "future (>=1.0.0,<2.0.0)"
]

[tool.pylint.main]
source-roots = "./src/*"

[tool.pylint.format]
max-line-length = 120

[tool.poetry]
packages = [{include = "photo_manager", from = "src"},
            {include = "photo_frame", from = "src"}]



[tool.poetry.group.dev]
optional = true

[tool.poetry.group.photo_frame]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^25.9.0"
flake8 = "^7.3.0"
isort = "^6.0.1"
mypy = "^1.18.2"
pylint = "^3.3.8"
pytest = "8.4.2"

[tool.poetry.group.photo_frame.dependencies]
PySimpleGUI = { git = "git+https://github.com/EchoDel/PySimpleGUI-4-foss.git"}
pillow = "12.1.1"
pillow-heif = ">=1.3.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
launch_photo_frame = "photo_frame.main:main"
